--- a/src/pages/DetailPage/DetailPage.module.css
+++ b/src/pages/DetailPage/DetailPage.module.css
@@ -1,5 +1,6 @@
 .detail_container {
   display: flex;
+  width: 100%;
 }
 
 .left_container {
@@ -7,9 +8,32 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   padding: var(--padding-main);
 }
 .rigth_container {
   width: 20%;
+}
+
+@media screen and (max-width: 769px) {
+  .detail_container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .rigth_container {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .left_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    padding: 20px;
+  }
 }
